# CSCE435_Project

./: .gitignore  README.md  Report.md  cuda_team.ipynb  mpi_team.ipynb  old-mpi
cuda-merge/: CMakeLists.txt  analysis.ipynb  build.sh  dispatch.sh  helper.cuh  merge.cu  merge.grace_job
cuda-merge/.ipynb_checkpoints/: analysis-checkpoint.ipynb
cuda-merge/Caliper-CUDA/: merge_1024-1048576-1.cali  merge_1024-1048576-2.cali  merge_1024-1048576-3.cali  merge_1024-1048576-4.cali  merge_1024-16777216-1.cali  merge_1024-16777216-2.cali  merge_1024-16777216-3.cali  merge_1024-16777216-4.cali  merge_1024-262144-1.cali  merge_1024-262144-2.cali  merge_1024-262144-3.cali  merge_1024-262144-4.cali  merge_1024-268435456-1.cali  merge_1024-268435456-2.cali  merge_1024-268435456-3.cali  merge_1024-268435456-4.cali  merge_1024-4194304-1.cali  merge_1024-4194304-2.cali  merge_1024-4194304-3.cali  merge_1024-4194304-4.cali  merge_1024-65536-1.cali  merge_1024-65536-2.cali  merge_1024-65536-3.cali  merge_1024-65536-4.cali  merge_1024-67108864-1.cali  merge_1024-67108864-2.cali  merge_1024-67108864-3.cali  merge_1024-67108864-4.cali  merge_128-1048576-1.cali  merge_128-1048576-2.cali  merge_128-1048576-3.cali  merge_128-1048576-4.cali  merge_128-16777216-1.cali  merge_128-16777216-2.cali  merge_128-16777216-3.cali  merge_128-16777216-4.cali  merge_128-262144-1.cali  merge_128-262144-2.cali  merge_128-262144-3.cali  merge_128-262144-4.cali  (+100 more)
cuda-merge/cuda-merge-cali/: merge_1024-1048576-2.cali  merge_1024-1048576-3.cali  merge_1024-1048576-4.cali  merge_1024-16777216-1.cali  (+90 more)
(+430 files in other folders)
